--- a/src/themes/dark.scss
+++ b/src/themes/dark.scss
@@ -239,7 +239,6 @@ body.dark {
 
     textarea:focus {
         border-color: $border-color-dark;
-        background-color: $bg-color-dark-dim;
     }
 
     .modal-content,
